--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "@types/highcharts": "^7.0.0",
+    "@types/jest": "^25.2.3",
     "bootstrap": "^3.4.1",
     "highcharts": "^8.1.1",
     "rxjs": "~6.5.5",
@@ -37,7 +38,7 @@
     "@angular/language-service": "~9.1.9",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
