--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,15 +2,21 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [
+      "highcharts",
+      "jest"
+    ]
   },
   "files": [
     "src/main.ts",
     "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.ts"
+    
+    "src/**/*.ts",
+    
   ],
+  // "enableIvy": false ,
   "exclude": [
     "src/test.ts",
     "src/**/*.spec.ts"
