--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,9 +2,11 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
+    // "module": "es2015",
     "types": [
+      // "node",
       "highcharts",
-      "jest"
+      
     ]
   },
   "files": [
